# ac_dat

./: .gitignore  CMakeLists.txt  license.md  readme.md
bench/: CMakeLists.txt  main.c
cli/: go.mod  main.go
client/go/: client.go  go.mod
cmd/: CMakeLists.txt  main.c
example/: CMakeLists.txt  main.c
include/: ac.h  dat.h  file.h  list.h  needle.h  print.h  socket.h  socket_ac.h  tail.h  thread.h  user_data.h
lib/: CMakeLists.txt  libac_dat.pc.in
src/: ac.c  ac.h  ac_list.c  ac_list.h  char.c  char.h  char_coding.c  char_coding.h  character.c  character.h  dat.c  dat.h  debug.c  debug.h  defs.h  file.c  file.h  list.c  list.h  main.c  mem.c  mem.h  memory.c  memory.h  needle.c  needle.h  print.c  print.h  sock.c  sock.h  sock_ac.c  sock_ac.h  socket.c  socket.h  socket_ac.c  socket_ac.h  tail.c  tail.h  thread.c  thread.h  (+3 more)
